# annofabapi-3dpc-extensions

./: .travis.yml  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  lint-test.yml  publish-to-pypi.yml
annofab_3dpc/: annotation.py
annofab_3dpc/model/: annotation.py
docs/: conf.py  index.rst  requirements.txt  user_guide.rst
docs/api_reference/: annotation.rst  index.rst
tests/: test_annotation.py
tests/data/: invalid_simple_annotation.json  simple_annotation.json
tests/data/task1/: input1.json
tests/data/task1/input1/: 7ba51c15-f07a-4e29-8584-a4eaf3a6812a
