[tool.poetry]
name = "annofabapi-3dpc-extensions"
version = "0.0.0"  # `poetry-dynamic-versioning`を使ってGitHubのバージョンタグを取得している。変更不要
description = "annofabapiの3DPC Editor用の拡張機能です。"
authors = ["Kurusugawa Computer Inc."]
packages = [
    { include = "annofab_3dpc" }
]
readme="README.md"
repository="https://github.com/kurusugawa-computer/annofabapi-3dpc-extensions"
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Topic :: Utilities",
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8.1"
dataclasses-json="*"

# Pythonバージョンでnumpyのバージョンを変えている理由
# https://qiita.com/yuji38kwmt/items/7ce857bb8698536bfa36
numpy = [
  {version = ">=1.26", python = ">=3.9"},
  {version = "<1.25", python = "=3.8"}
]


[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-xdist = "*"
pytest-cov = "*"
# テストコードで利用するため
annofabapi = ">=0.47.0"


[tool.poetry.group.linter.dependencies]
# pythonバージョンを指定している理由：Python3.11（開発環境）でしかlintを実行していないため
ruff = {version="^0.2", python=">=3.11"}
mypy = {version="^1", python=">=3.11"}
pylint = {version="^3", python=">=3.11"}


[tool.poetry.group.documentation.dependencies]
# ドキュメント生成用のライブラリ
# `python=">=3.11"`を指定している理由：Pytyhon3.11を利用している開発環境かReadTheDocsでしかドキュメントを生成しないため
sphinx = {version="^7", python=">=3.11"}
pydata-sphinx-theme = {version=">=0.13", python=">=3.11"}





[tool.black]
line-length = 120

[tool.isort]
line_length = 120
[tool.mypy]
# スタブが無いパッケージのエラーは無視させる.サードパーティのライブラリに型情報がないケースもあるため
ignore_missing_imports = true
check_untyped_defs = true

[tool.poetry-dynamic-versioning]
enable = true
format = "{base}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

